fixed spacing issue (for now)

--- a/src/styles/Signup.css
+++ b/src/styles/Signup.css
@@ -12,9 +12,8 @@
 
 .signup-container {
   margin-top: 40px;
-  max-width: 500px;
+  max-width: 600px;
   width: 100%;
-  height: 65vh;
   background-color: #fff;
   color: #000;
   border-radius: 0.375rem; /* 6px */
@@ -22,9 +21,8 @@
 
 .login-container {
   margin-top: 40px;
-  max-width: 500px;
+  max-width: 600px;
   width: 100%;
-  height: 50vh;
   background-color: #fff;
   color: #000;
   border-radius: 0.375rem; /* 6px */
@@ -36,6 +34,7 @@
   display: flex;
   align-items: center;
   flex-direction: column;
+  padding: 1rem;
 }
 
 .signup-title {
